--- a/index.less
+++ b/index.less
@@ -1,32 +1,98 @@
 *{
     box-sizing: border-box;    
+    margin: 0;
+    padding: 0;
+}
+html{
+    width: 100%;
+    height: 100%;
 }
 body{
-    margin: 0;
     background: white;
+    background-size: cover;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    
+    height: 100%;
+    width: 100%;
+    display: table;
 }
-section{
-    background: white;
-    &.clear {
+section {
+    display: table-row;
+    &.last{
+        height: 100%;
+    }
+    
+    &.banner{
+        background: white;
+        padding: 1em;
+        
+        h1{
+            padding: 2em;   
+        }
+        p{
+            padding:1em;
+        }
+    }
+    
+    &.clear{
         background: transparent;
-    }
-    
-    padding: 1em;
-    max-width: 760px;
-    
-
-    @media (max-width: 768px){
-        margin-left: 1%;
-        margin-right: 1%;
-    }
-    @media (min-width: 769px){
-        margin:auto;
+        padding: 10em;
     }
 }
 
-.nopad{
-    padding: 0px;
+br{
+    
+    
+}
+//section.banner, section.clear{
+//    &.banner{
+//        background: white;
+//    }
+//    &.clear {
+//        background: transparent;
+//    }
+//    
+//    padding: 1em;
+//    max-width: 760px;
+//    
+//
+//    @media (max-width: 768px){
+//        margin-left: 1%;
+//        margin-right: 1%;
+//    }
+//    @media (min-width: 769px){
+//        margin:auto;
+//    }
+//}
+//
+//.nopad{
+//    padding: 0px;
+//}
+.tilebox{
+    display:flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    
+    .tile{
+        width: 150px;
+        height: 150px;
+        background: white;
+        float:left;
+        margin: 1em;
+        vertical-align: center;
+        display: flex;
+        align-items:center;
+        justify-content: center;
+        
+        a{
+            text-decoration: none;
+            color:inherit;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
 }
