some changes to something

--- a/components/navigation/topnavbar.less
+++ b/components/navigation/topnavbar.less
@@ -4,10 +4,13 @@
 @bkgd_darken_factor: .4;
 #topNavBar{
 	text-align: center;
-	background: rgba(255, 255, 255, .2);
+	background: rgba(0, 0, 0, .4);
+//	border-bottom: 2px rgba(0,0,0, .6);
     margin: 0;
     font-size: 1.5em;
-	
+	hr{
+		border: none;
+	}
 	.green{
 		color: @green;
 		&:focus, &:hover, &:active{
