--- a/index.css
+++ b/index.css
@@ -47,6 +47,7 @@ section.clear {
   width: 150px;
   height: 150px;
   background: white;
+  position: relative;
   float: left;
   margin: 1em;
   vertical-align: center;
@@ -56,6 +57,25 @@ section.clear {
   transition-duration: .5s;
   transition-property: background;
 }
+.tilebox .tile div.background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-filter: grayscale(0.7) blur(1px);
+  filter: grayscale(0.7) blur(1px);
+}
+.tilebox .tile div.background.windsor {
+  background-image: url('http://coderdojo.cs.dartmouth.edu/~coderdojo/wp-content/uploads/2014/11/BigYellowJacket.gif');
+  background-size: cover;
+}
+.tilebox .tile div.background.dartmouth {
+  background-image: url('http://coderdojo.cs.dartmouth.edu/~coderdojo/wp-content/uploads/2012/11/dmcd_logo-150x150.png');
+  background-size: cover;
+}
+.tilebox .tile div.background.lebanon {
+  background-image: url('http://coderdojo.cs.dartmouth.edu/~coderdojo/wp-content/uploads/2014/11/ysZxIZ.jpg');
+  background-size: cover;
+}
 .tilebox .tile:hover,
 .tilebox .tile:focus,
 .tilebox .tile:active {
@@ -63,7 +83,8 @@ section.clear {
 }
 .tilebox .tile a {
   text-decoration: none;
-  color: inherit;
+  color: white;
+  text-shadow: 0 0 2px black;
   width: 100%;
   height: 100%;
   display: flex;
