--- a/index.less
+++ b/index.less
@@ -44,30 +44,7 @@ br{
     
     
 }
-//section.banner, section.clear{
-//    &.banner{
-//        background: white;
-//    }
-//    &.clear {
-//        background: transparent;
-//    }
-//    
-//    padding: 1em;
-//    max-width: 760px;
-//    
-//
-//    @media (max-width: 768px){
-//        margin-left: 1%;
-//        margin-right: 1%;
-//    }
-//    @media (min-width: 769px){
-//        margin:auto;
-//    }
-//}
-//
-//.nopad{
-//    padding: 0px;
-//}
+
 .tilebox{
     display:flex;
     height: 100%;
@@ -78,12 +55,34 @@ br{
         width: 150px;
         height: 150px;
         background: white;
+		position:relative;
         float:left;
         margin: 1em;
         vertical-align: center;
         display: flex;
         align-items:center;
         justify-content: center;
+		
+		& div.background{
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			-webkit-filter: grayscale(.7) blur(1px);filter: grayscale(.7) blur(1px);
+			
+			&.windsor{
+				background-image: url('http://coderdojo.cs.dartmouth.edu/~coderdojo/wp-content/uploads/2014/11/BigYellowJacket.gif');
+				background-size: cover;
+			}
+			&.dartmouth{
+				background-image: url('http://coderdojo.cs.dartmouth.edu/~coderdojo/wp-content/uploads/2012/11/dmcd_logo-150x150.png');
+				background-size: cover;
+			}
+			&.lebanon{
+				background-image: url('http://coderdojo.cs.dartmouth.edu/~coderdojo/wp-content/uploads/2014/11/ysZxIZ.jpg');
+				background-size: cover;
+			}
+			
+		}
 		
 		transition-duration: .5s;
 		transition-property: background;
@@ -92,9 +91,10 @@ br{
 			background: rgba(62, 199, 136, 0.9);
 		}
         
-        a{
+        a{	
             text-decoration: none;
-            color:inherit;
+            color:white;
+			text-shadow: 0 0 2px black; 
             width: 100%;
             height: 100%;
             display: flex;
