--- a/dojoer/dartmouth/2018/lvasquez/assets/css/main.css
+++ b/dojoer/dartmouth/2018/lvasquez/assets/css/main.css
@@ -12,7 +12,7 @@
   overflow: hidden;
 /*  background-color: #E32636;*/
     background-size: cover;
-    background-image: url(/assets/img/hands_typing.jpeg);
+    background-image: url(../img/hands_typing.jpeg);
 }
 
 .about-wrapper {
